--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "recharts": "^2.15.0",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
