--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,11 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.14",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
