--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^11.16.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
     "marked": "^15.0.6",
     "react": "^18.2.0",
@@ -23,6 +26,7 @@
     "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
+    "tailwind-merge": "^2.6.0",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
