--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,9 +26,11 @@
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.0",
+    "shadcn-ui": "^0.9.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
